# Todo_REST_api

./: README.md  db.sqlite3  pyproject.toml
Main/: settings.py  urls.py
Todo/: admin.py  models.py  serializers.py  views.py
Todo/migrations/: 0001_initial.py
